--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 tumahre se
                 lipta tab mughe kuchh hosh nhi tha mai bs itans chahta tha ki bs ye pal kabhi khatam na ho mughe kisi ki
                 chinta nhi thi thanks,thanks for this moment. </p>
-            <div class="mass">
+<!--             <div class="mass">
                 <textarea name="" class="send-mass" placeholder="Type your massage..."></textarea>
                 <button class="send" style="height: 30px;">Send</button>
             </div>
-        </div>
+        </div> -->
 
     </div>
     <script src="js.js"></script>
