--- a/index.html
+++ b/index.html
@@ -22,17 +22,20 @@
     <div class="main2">
         <div class="hug">
         </div>
-        <div class="text">
+ <div class="text">
             <h1>Heer</h1><br>
-            <p>05/22/2025 <br> Aaj mai sabse jyada khush tha kyuki mughe pahle kabhi yesa feel nhi huaa tha jab mai
+            <p>05/22/2025 <br> Aaj mai sabse jyada khush tha kyuki mughe pahle kabhi yesa feel nhi huaa tha jaisa mai
                 tumahre se
-                lipta tab mughe kuchh hosh nhi tha mai bs itans chahta tha ki bs ye pal kabhi khatam na ho mughe kisi ki
-                chinta nhi thi thanks,thanks for this moment. </p>
-<!--             <div class="mass">
+                liptke huaa. us samay mughe kuchh hosh nhi tha mai bs itans chahta tha ki bs ye pal kabhi khatam na ho
+                mughe
+                kisi ki
+                chinta nhi thi thanks,thanks for this moment. aur ha agli bar jab mai tumhe hug karu to tum bhi karana
+                is bar tumhe bs jane ki jaldi thi pr agli bat yesa mat karna samghi meri red panda😘🐼</p>
+            <!-- <div class="mass">
                 <textarea name="" class="send-mass" placeholder="Type your massage..."></textarea>
                 <button class="send" style="height: 30px;">Send</button>
-            </div>
-        </div> -->
+            </div> -->
+        </div>
 
     </div>
     <script src="js.js"></script>
